Fixed preformated text to wrap itself when too long

--- a/src/main/resources/static/css/output-fragment.css
+++ b/src/main/resources/static/css/output-fragment.css
@@ -122,6 +122,13 @@
     white-space: pre;
     font-weight: 900;
 }
+.result pre{
+    white-space: pre-wrap;       /* Since CSS 2.1 */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+    white-space: -pre-wrap;      /* Opera 4-6 */
+    white-space: -o-pre-wrap;    /* Opera 7 */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
 
 .command-displaying{
 	height: 40px;
